--- a/01b-avito-downloader-land.ipynb
+++ b/01b-avito-downloader-land.ipynb
@@ -116,40 +116,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2022-09-12 13:49:24 | DownloaderSeleniumFirefox: downloader init\n",
-      "[INFO    ] 2022-09-12 13:49:24 | DownloaderSeleniumFirefox: open virtual browser\n",
-      "[INFO    ] 2022-09-12 13:49:26 | AdsListParser: downloader init\n",
-      "[INFO    ] 2022-09-12 13:49:26 | AvitoParser: init\n",
-      "[INFO    ] 2022-09-12 13:50:05 | AvitoParser: 23 pages for read\n",
-      "[INFO    ] 2022-09-12 13:50:05 | AdsListParser: start read and parse pages...\n",
-      "[INFO    ] 2022-09-12 13:50:09 | AdsListParser: read page 1\n",
-      "[INFO    ] 2022-09-12 13:50:13 | AdsListParser: read page 2\n",
-      "[INFO    ] 2022-09-12 13:50:16 | AdsListParser: read page 3\n",
-      "[INFO    ] 2022-09-12 13:50:20 | AdsListParser: read page 4\n",
-      "[INFO    ] 2022-09-12 13:50:24 | AdsListParser: read page 5\n",
-      "[INFO    ] 2022-09-12 13:50:27 | AdsListParser: read page 6\n",
-      "[INFO    ] 2022-09-12 13:50:29 | AdsListParser: read page 7\n",
-      "[INFO    ] 2022-09-12 13:50:31 | AdsListParser: read page 8\n",
-      "[INFO    ] 2022-09-12 13:50:34 | AdsListParser: read page 9\n",
-      "[INFO    ] 2022-09-12 13:50:36 | AdsListParser: read page 10\n",
-      "[INFO    ] 2022-09-12 13:50:39 | AdsListParser: read page 11\n",
-      "[INFO    ] 2022-09-12 13:50:42 | AdsListParser: read page 12\n",
-      "[INFO    ] 2022-09-12 13:50:45 | AdsListParser: read page 13\n",
-      "[INFO    ] 2022-09-12 13:50:49 | AdsListParser: read page 14\n",
-      "[INFO    ] 2022-09-12 13:50:52 | AdsListParser: read page 15\n",
-      "[INFO    ] 2022-09-12 13:50:55 | AdsListParser: read page 16\n",
-      "[INFO    ] 2022-09-12 13:50:58 | AdsListParser: read page 17\n",
-      "[INFO    ] 2022-09-12 13:51:01 | AdsListParser: read page 18\n",
-      "[INFO    ] 2022-09-12 13:51:04 | AdsListParser: read page 19\n",
-      "[INFO    ] 2022-09-12 13:51:08 | AdsListParser: read page 20\n",
-      "[INFO    ] 2022-09-12 13:51:12 | AdsListParser: read page 21\n",
-      "[INFO    ] 2022-09-12 13:51:14 | AdsListParser: read page 22\n",
-      "[INFO    ] 2022-09-12 13:51:16 | AdsListParser: read page 23\n",
-      "[INFO    ] 2022-09-12 13:51:16 | AdsListParser: last page detected\n",
-      "[INFO    ] 2022-09-12 13:51:17 | DownloaderSeleniumFirefox: close virtual browser\n",
-      "1119\n",
-      "CPU times: user 4.58 s, sys: 113 ms, total: 4.69 s\n",
-      "Wall time: 1min 52s\n"
+      "[INFO    ] 2022-09-13 13:55:29 | DownloaderSeleniumFirefox: downloader init\n",
+      "[INFO    ] 2022-09-13 13:55:29 | DownloaderSeleniumFirefox: open virtual browser\n",
+      "[INFO    ] 2022-09-13 13:55:31 | AdsListParser: downloader init\n",
+      "[INFO    ] 2022-09-13 13:55:31 | AvitoParser: init\n",
+      "[INFO    ] 2022-09-13 13:55:37 | AvitoParser: 23 pages for read\n",
+      "[INFO    ] 2022-09-13 13:55:37 | AdsListParser: start read and parse pages...\n",
+      "[INFO    ] 2022-09-13 13:55:41 | AdsListParser: read page 1\n",
+      "[INFO    ] 2022-09-13 13:55:45 | AdsListParser: read page 2\n",
+      "[INFO    ] 2022-09-13 13:55:48 | AdsListParser: read page 3\n",
+      "[INFO    ] 2022-09-13 13:55:52 | AdsListParser: read page 4\n",
+      "[INFO    ] 2022-09-13 13:55:54 | AdsListParser: read page 5\n",
+      "[INFO    ] 2022-09-13 13:55:57 | AdsListParser: read page 6\n",
+      "[INFO    ] 2022-09-13 13:56:00 | AdsListParser: read page 7\n",
+      "[INFO    ] 2022-09-13 13:56:05 | AdsListParser: read page 8\n",
+      "[INFO    ] 2022-09-13 13:56:08 | AdsListParser: read page 9\n",
+      "[INFO    ] 2022-09-13 13:56:13 | AdsListParser: read page 10\n",
+      "[INFO    ] 2022-09-13 13:56:16 | AdsListParser: read page 11\n",
+      "[INFO    ] 2022-09-13 13:56:19 | AdsListParser: read page 12\n",
+      "[INFO    ] 2022-09-13 13:56:22 | AdsListParser: read page 13\n",
+      "[INFO    ] 2022-09-13 13:56:24 | AdsListParser: read page 14\n",
+      "[INFO    ] 2022-09-13 13:56:27 | AdsListParser: read page 15\n",
+      "[INFO    ] 2022-09-13 13:56:30 | AdsListParser: read page 16\n",
+      "[INFO    ] 2022-09-13 13:56:33 | AdsListParser: read page 17\n",
+      "[INFO    ] 2022-09-13 13:56:38 | AdsListParser: read page 18\n",
+      "[INFO    ] 2022-09-13 13:56:41 | AdsListParser: read page 19\n",
+      "[INFO    ] 2022-09-13 13:56:44 | AdsListParser: read page 20\n",
+      "[INFO    ] 2022-09-13 13:56:46 | AdsListParser: read page 21\n",
+      "[INFO    ] 2022-09-13 13:56:52 | AdsListParser: read page 22\n",
+      "[INFO    ] 2022-09-13 13:56:54 | AdsListParser: read page 23\n",
+      "[INFO    ] 2022-09-13 13:56:54 | AdsListParser: last page detected\n",
+      "[INFO    ] 2022-09-13 13:56:55 | DownloaderSeleniumFirefox: close virtual browser\n",
+      "1121\n",
+      "CPU times: user 4.65 s, sys: 119 ms, total: 4.77 s\n",
+      "Wall time: 1min 25s\n"
      ]
     }
    ],
@@ -177,8 +177,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1119\n",
-      "1106\n"
+      "1121\n",
+      "1111\n"
      ]
     }
    ],
@@ -239,47 +239,51 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1011</th>\n",
-       "      <td>2490769490</td>\n",
-       "      <td>Объявление «Участок 8 сот. (ИЖС)» 5 фотографий</td>\n",
-       "      <td>8000000</td>\n",
-       "      <td></td>\n",
-       "      <td>садовое товарищество Поиск</td>\n",
-       "      <td>Электричество есть. За водопровод проплачено. На участке есть металлический гараж.</td>\n",
-       "      <td>21</td>\n",
-       "      <td>2022-09-12 13:51:16.745127</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>468</th>\n",
-       "      <td>2427924436</td>\n",
-       "      <td>Объявление «Участок 2,5 сот. (ИЖС)» 10 фотографий</td>\n",
+       "      <th>333</th>\n",
+       "      <td>2302356440</td>\n",
+       "      <td>Объявление «Участок 10 сот. (ИЖС)» 32 фотографии</td>\n",
        "      <td>1800000</td>\n",
        "      <td></td>\n",
-       "      <td>пос. городского типа Кача, ул. Авиаторов, 29А/3</td>\n",
-       "      <td>Участок Ижс ровный 10*25 в центре поселка, вода подключена, газ/свет вдоль участка.</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2022-09-12 13:51:16.745127</td>\n",
+       "      <td>Севастополь, Балаклавский район, Орлиновский муниципальный округ</td>\n",
+       "      <td>Участки по новому ген плану войдут в зону населенного пункта и под малоэтажную жилищную застройку(ижс) на противоположном берегу большого озера у села Широкое, в 300 метрах от берега, прекрасные обзорные виды и чистейший воздух. \\n\\nЧитаем внимательно! \\nНа с</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2022-09-13 13:56:54.600362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>872</th>\n",
+       "      <td>2365205749</td>\n",
+       "      <td>Объявление «Участок 5 сот. (ИЖС)» 13 фотографий</td>\n",
+       "      <td>4200000</td>\n",
+       "      <td></td>\n",
+       "      <td>Монастырское ш.</td>\n",
+       "      <td>Предлагается к продаже участок,5 соток, на Фиоленте-в первой линии от дороги (ориентир-конечная остановка автобусов №3, где воинская часть или Яшмовый пляж). Участок прямоугольной формы, одна половина-идеально ровная, другая-под небольшим уклоном. Коммуник</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2022-09-13 13:56:54.600362</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        avito_id                                              title    price  \\\n",
-       "1011  2490769490     Объявление «Участок 8 сот. (ИЖС)» 5 фотографий  8000000   \n",
-       "468   2427924436  Объявление «Участок 2,5 сот. (ИЖС)» 10 фотографий  1800000   \n",
+       "       avito_id                                             title    price  \\\n",
+       "333  2302356440  Объявление «Участок 10 сот. (ИЖС)» 32 фотографии  1800000   \n",
+       "872  2365205749   Объявление «Участок 5 сот. (ИЖС)» 13 фотографий  4200000   \n",
        "\n",
-       "     obj_name                                              adr  \\\n",
-       "1011                                садовое товарищество Поиск   \n",
-       "468            пос. городского типа Кача, ул. Авиаторов, 29А/3   \n",
+       "    obj_name  \\\n",
+       "333            \n",
+       "872            \n",
        "\n",
-       "                                                                              description  \\\n",
-       "1011   Электричество есть. За водопровод проплачено. На участке есть металлический гараж.   \n",
-       "468   Участок Ижс ровный 10*25 в центре поселка, вода подключена, газ/свет вдоль участка.   \n",
+       "                                                                  adr  \\\n",
+       "333  Севастополь, Балаклавский район, Орлиновский муниципальный округ   \n",
+       "872                                                   Монастырское ш.   \n",
        "\n",
-       "      page                         ts  \n",
-       "1011    21 2022-09-12 13:51:16.745127  \n",
-       "468     10 2022-09-12 13:51:16.745127  "
+       "                                                                                                                                                                                                                                                             description  \\\n",
+       "333  Участки по новому ген плану войдут в зону населенного пункта и под малоэтажную жилищную застройку(ижс) на противоположном берегу большого озера у села Широкое, в 300 метрах от берега, прекрасные обзорные виды и чистейший воздух. \\n\\nЧитаем внимательно! \\nНа с   \n",
+       "872     Предлагается к продаже участок,5 соток, на Фиоленте-в первой линии от дороги (ориентир-конечная остановка автобусов №3, где воинская часть или Яшмовый пляж). Участок прямоугольной формы, одна половина-идеально ровная, другая-под небольшим уклоном. Коммуник   \n",
+       "\n",
+       "     page                         ts  \n",
+       "333     7 2022-09-13 13:56:54.600362  \n",
+       "872    18 2022-09-13 13:56:54.600362  "
       ]
      },
      "execution_count": 9,
