--- a/06a-data-join-flat.ipynb
+++ b/06a-data-join-flat.ipynb
@@ -85,7 +85,6 @@
     "avito_raw_data_path = 'data/raw/flat/avito' \n",
     "cian_raw_data_path = 'data/raw/flat/cian'\n",
     "\n",
-    "loc_file_path = 'data/location.pkl' # таблица адресов\n",
     "result_file_path = 'data/data_flat.pkl'"
    ]
   },
@@ -126,7 +125,8 @@
        " 'data/raw/flat/avito/avito_2022-09-06_13-09_raw.xlsx',\n",
        " 'data/raw/flat/avito/avito_2022-09-07_12-39_raw.xlsx',\n",
        " 'data/raw/flat/avito/avito_2022-09-08_13-36_raw.xlsx',\n",
-       " 'data/raw/flat/avito/avito_2022-09-12_13-44_raw.xlsx']"
+       " 'data/raw/flat/avito/avito_2022-09-12_13-44_raw.xlsx',\n",
+       " 'data/raw/flat/avito/avito_2022-09-13_13-55_raw.xlsx']"
       ]
      },
      "execution_count": 6,
@@ -156,7 +156,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17454\n"
+      "17951\n"
      ]
     }
    ],
@@ -199,31 +199,31 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 17454 entries, 0 to 17453\n",
+      "RangeIndex: 17951 entries, 0 to 17950\n",
       "Data columns (total 21 columns):\n",
       " #   Column         Non-Null Count  Dtype         \n",
       "---  ------         --------------  -----         \n",
-      " 0   avito_id       17454 non-null  int64         \n",
-      " 1   title          17454 non-null  object        \n",
-      " 2   price          17454 non-null  int64         \n",
-      " 3   adr            17454 non-null  object        \n",
-      " 4   description    17454 non-null  object        \n",
-      " 5   obj_name       17454 non-null  object        \n",
-      " 6   ts             17454 non-null  datetime64[ns]\n",
-      " 7   avito_page     17454 non-null  int64         \n",
-      " 8   nrooms         17454 non-null  int64         \n",
-      " 9   floor          17454 non-null  int64         \n",
-      " 10  nfloors        17454 non-null  int64         \n",
-      " 11  area           17454 non-null  float64       \n",
-      " 12  is_studio      17454 non-null  bool          \n",
-      " 13  is_apartment   17454 non-null  bool          \n",
-      " 14  is_part        17454 non-null  bool          \n",
-      " 15  is_auction     17454 non-null  bool          \n",
-      " 16  is_openspace   17454 non-null  bool          \n",
-      " 17  is_roof        17454 non-null  bool          \n",
-      " 18  is_SNT         17454 non-null  bool          \n",
-      " 19  priceM         17454 non-null  float64       \n",
-      " 20  is_last_floor  17454 non-null  bool          \n",
+      " 0   avito_id       17951 non-null  int64         \n",
+      " 1   title          17951 non-null  object        \n",
+      " 2   price          17951 non-null  int64         \n",
+      " 3   adr            17951 non-null  object        \n",
+      " 4   description    17951 non-null  object        \n",
+      " 5   obj_name       17951 non-null  object        \n",
+      " 6   ts             17951 non-null  datetime64[ns]\n",
+      " 7   avito_page     17951 non-null  int64         \n",
+      " 8   nrooms         17951 non-null  int64         \n",
+      " 9   floor          17951 non-null  int64         \n",
+      " 10  nfloors        17951 non-null  int64         \n",
+      " 11  area           17951 non-null  float64       \n",
+      " 12  is_studio      17951 non-null  bool          \n",
+      " 13  is_apartment   17951 non-null  bool          \n",
+      " 14  is_part        17951 non-null  bool          \n",
+      " 15  is_auction     17951 non-null  bool          \n",
+      " 16  is_openspace   17951 non-null  bool          \n",
+      " 17  is_roof        17951 non-null  bool          \n",
+      " 18  is_SNT         17951 non-null  bool          \n",
+      " 19  priceM         17951 non-null  float64       \n",
+      " 20  is_last_floor  17951 non-null  bool          \n",
       "dtypes: bool(8), datetime64[ns](1), float64(2), int64(6), object(4)\n",
       "memory usage: 1.9+ MB\n"
      ]
@@ -262,7 +262,8 @@
      "data": {
       "text/plain": [
        "['data/raw/flat/cian/cian_2022-09-08_14-25_raw.pkl',\n",
-       " 'data/raw/flat/cian/cian_2022-09-12_13-59_raw.pkl']"
+       " 'data/raw/flat/cian/cian_2022-09-12_13-59_raw.pkl',\n",
+       " 'data/raw/flat/cian/cian_2022-09-13_13-59_raw.pkl']"
       ]
      },
      "execution_count": 11,
@@ -313,23 +314,23 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 3009 entries, 0 to 3008\n",
+      "RangeIndex: 4515 entries, 0 to 4514\n",
       "Data columns (total 11 columns):\n",
       " #   Column         Non-Null Count  Dtype         \n",
       "---  ------         --------------  -----         \n",
-      " 0   OfferTitle     3009 non-null   object        \n",
-      " 1   OfferSubtitle  3009 non-null   object        \n",
-      " 2   Deadline       3009 non-null   object        \n",
-      " 3   MainPrice      3009 non-null   object        \n",
-      " 4   PriceInfo      3009 non-null   object        \n",
-      " 5   GeoLabel       3009 non-null   object        \n",
-      " 6   TimeLabel      3009 non-null   object        \n",
-      " 7   LinkArea       3009 non-null   object        \n",
-      " 8   Description    3009 non-null   object        \n",
-      " 9   cian_page      3009 non-null   int64         \n",
-      " 10  ts             3009 non-null   datetime64[ns]\n",
+      " 0   OfferTitle     4515 non-null   object        \n",
+      " 1   OfferSubtitle  4515 non-null   object        \n",
+      " 2   Deadline       4515 non-null   object        \n",
+      " 3   MainPrice      4515 non-null   object        \n",
+      " 4   PriceInfo      4515 non-null   object        \n",
+      " 5   GeoLabel       4515 non-null   object        \n",
+      " 6   TimeLabel      4515 non-null   object        \n",
+      " 7   LinkArea       4515 non-null   object        \n",
+      " 8   Description    4515 non-null   object        \n",
+      " 9   cian_page      4515 non-null   int64         \n",
+      " 10  ts             4515 non-null   datetime64[ns]\n",
       "dtypes: datetime64[ns](1), int64(1), object(9)\n",
-      "memory usage: 258.7+ KB\n"
+      "memory usage: 388.1+ KB\n"
      ]
     }
    ],
@@ -373,7 +374,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3009\n"
+      "4515\n"
      ]
     }
    ],
@@ -406,33 +407,33 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 3009 entries, 0 to 3008\n",
+      "RangeIndex: 4515 entries, 0 to 4514\n",
       "Data columns (total 21 columns):\n",
       " #   Column         Non-Null Count  Dtype         \n",
       "---  ------         --------------  -----         \n",
-      " 0   title          3009 non-null   object        \n",
-      " 1   obj_name       3009 non-null   object        \n",
-      " 2   adr            3009 non-null   object        \n",
-      " 3   nrooms         3009 non-null   int64         \n",
-      " 4   floor          3009 non-null   int64         \n",
-      " 5   nfloors        3009 non-null   int64         \n",
-      " 6   area           3009 non-null   float64       \n",
-      " 7   is_studio      3009 non-null   bool          \n",
-      " 8   is_apartment   3009 non-null   bool          \n",
-      " 9   is_part        3009 non-null   bool          \n",
-      " 10  is_auction     3009 non-null   bool          \n",
-      " 11  is_openspace   3009 non-null   bool          \n",
-      " 12  is_roof        3009 non-null   bool          \n",
-      " 13  is_SNT         3009 non-null   bool          \n",
-      " 14  price          3009 non-null   int64         \n",
-      " 15  priceM         3009 non-null   float64       \n",
-      " 16  is_last_floor  3009 non-null   bool          \n",
-      " 17  cian_url       3009 non-null   object        \n",
-      " 18  description    3009 non-null   object        \n",
-      " 19  cian_page      3009 non-null   int64         \n",
-      " 20  ts             3009 non-null   datetime64[ns]\n",
+      " 0   title          4515 non-null   object        \n",
+      " 1   obj_name       4515 non-null   object        \n",
+      " 2   adr            4515 non-null   object        \n",
+      " 3   nrooms         4515 non-null   int64         \n",
+      " 4   floor          4515 non-null   int64         \n",
+      " 5   nfloors        4515 non-null   int64         \n",
+      " 6   area           4515 non-null   float64       \n",
+      " 7   is_studio      4515 non-null   bool          \n",
+      " 8   is_apartment   4515 non-null   bool          \n",
+      " 9   is_part        4515 non-null   bool          \n",
+      " 10  is_auction     4515 non-null   bool          \n",
+      " 11  is_openspace   4515 non-null   bool          \n",
+      " 12  is_roof        4515 non-null   bool          \n",
+      " 13  is_SNT         4515 non-null   bool          \n",
+      " 14  price          4515 non-null   int64         \n",
+      " 15  priceM         4515 non-null   float64       \n",
+      " 16  is_last_floor  4515 non-null   bool          \n",
+      " 17  cian_url       4515 non-null   object        \n",
+      " 18  description    4515 non-null   object        \n",
+      " 19  cian_page      4515 non-null   int64         \n",
+      " 20  ts             4515 non-null   datetime64[ns]\n",
       "dtypes: bool(8), datetime64[ns](1), float64(2), int64(5), object(5)\n",
-      "memory usage: 329.2+ KB\n"
+      "memory usage: 494.0+ KB\n"
      ]
     }
    ],
@@ -471,7 +472,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20463\n"
+      "22466\n"
      ]
     }
    ],
@@ -491,47 +492,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "7d191d0d",
+   "execution_count": null,
+   "id": "ee01d714",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2022-09-12 14:16:14 | LocationUpdater: 3149 addresses in location table\n",
-      "[INFO    ] 2022-09-12 14:16:14 | LocationUpdater: 3281 addresses total\n",
-      "[INFO    ] 2022-09-12 14:16:14 | LocationUpdater: 3149 addresses defined\n",
-      "[INFO    ] 2022-09-12 14:16:14 | LocationUpdater: 132 addresses undefined\n"
+      "[INFO    ] 2022-09-13 15:36:31 | LocationUpdater: 875 addresses in location table\n",
+      "[INFO    ] 2022-09-13 15:36:31 | LocationUpdater: 3639 addresses total\n",
+      "[INFO    ] 2022-09-13 15:36:31 | LocationUpdater: 875 addresses defined\n",
+      "[INFO    ] 2022-09-13 15:36:31 | LocationUpdater: 2764 addresses undefined\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e9de32512cb4b29b98a26f4c419deb3",
+       "model_id": "59e906fc0d994bb3ae544893619c31ad",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/132 [00:00<?, ?it/s]"
+       "  0%|          | 0/2764 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO    ] 2022-09-12 14:18:49 | LocationUpdater: 89 new addresses found\n"
-     ]
     }
    ],
    "source": [
     "from lib.locator import LocationUpdater\n",
     "from lib.locator import AddressTransformerSev\n",
+    "from lib.locator import GeocoderYandex\n",
+    "from yandex_keys import keys\n",
+    "\n",
+    "loc_file_path = 'data/location_yandex.pkl'# таблица адресов\n",
     "\n",
     "loc = LocationUpdater(\n",
+    "        locator=GeocoderYandex(keys[0]),\n",
     "        address_transformer=AddressTransformerSev(),\n",
     "    ).transform(\n",
     "        adr=data['adr'],\n",
@@ -542,87 +541,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
+   "id": "7d191d0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from lib.locator import LocationUpdater\n",
+    "# from lib.locator import AddressTransformerSev\n",
+    "\n",
+    "# loc_file_path = 'data/location_osm.pkl'# таблица адресов\n",
+    "\n",
+    "# loc = LocationUpdater(\n",
+    "#         address_transformer=AddressTransformerSev(),\n",
+    "#     ).transform(\n",
+    "#         adr=data['adr'],\n",
+    "#         loc=pd.read_pickle(loc_file_path+'/location_osm.pkl'),\n",
+    "#         show_pbar=True,\n",
+    "#     )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "19741bb7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>adr</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>truncated</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>737</th>\n",
-       "      <td>улица Вакуленчука, 5</td>\n",
-       "      <td>44.59</td>\n",
-       "      <td>33.48</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2389</th>\n",
-       "      <td>Севастополь, район Ленинский, микрорайон Острякова, улица Николая Музыки, 36</td>\n",
-       "      <td>44.56</td>\n",
-       "      <td>33.53</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2113</th>\n",
-       "      <td>Севастополь, район Балаклавский, шоссе Фиолентовское, 134 к4</td>\n",
-       "      <td>44.51</td>\n",
-       "      <td>33.49</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                                               adr  \\\n",
-       "737                                                           улица Вакуленчука, 5   \n",
-       "2389  Севастополь, район Ленинский, микрорайон Острякова, улица Николая Музыки, 36   \n",
-       "2113                  Севастополь, район Балаклавский, шоссе Фиолентовское, 134 к4   \n",
-       "\n",
-       "      latitude  longitude truncated  \n",
-       "737      44.59      33.48     False  \n",
-       "2389     44.56      33.53      True  \n",
-       "2113     44.51      33.49     False  "
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "loc.sample(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "a90d2398",
    "metadata": {},
    "outputs": [],
@@ -641,19 +591,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "06470644",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "всего записей: 20463\n",
-      "записей без геометки: 988\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = data.merge(loc[['adr','latitude','longitude',]],on=['adr'],how='left')\n",
     "\n",
@@ -663,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "b3161e64",
    "metadata": {},
    "outputs": [],
@@ -674,56 +615,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "799e47c2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 20463 entries, 0 to 20462\n",
-      "Data columns (total 25 columns):\n",
-      " #   Column         Non-Null Count  Dtype         \n",
-      "---  ------         --------------  -----         \n",
-      " 0   avito_id       17454 non-null  float64       \n",
-      " 1   title          20463 non-null  object        \n",
-      " 2   price          20463 non-null  int64         \n",
-      " 3   adr            20463 non-null  object        \n",
-      " 4   description    20463 non-null  object        \n",
-      " 5   obj_name       20463 non-null  object        \n",
-      " 6   ts             20463 non-null  datetime64[ns]\n",
-      " 7   avito_page     17454 non-null  float64       \n",
-      " 8   nrooms         20463 non-null  int64         \n",
-      " 9   floor          20463 non-null  int64         \n",
-      " 10  nfloors        20463 non-null  int64         \n",
-      " 11  area           20463 non-null  float64       \n",
-      " 12  is_studio      20463 non-null  bool          \n",
-      " 13  is_apartment   20463 non-null  bool          \n",
-      " 14  is_part        20463 non-null  bool          \n",
-      " 15  is_auction     20463 non-null  bool          \n",
-      " 16  is_openspace   20463 non-null  bool          \n",
-      " 17  is_roof        20463 non-null  bool          \n",
-      " 18  is_SNT         20463 non-null  bool          \n",
-      " 19  priceM         20463 non-null  float64       \n",
-      " 20  is_last_floor  20463 non-null  bool          \n",
-      " 21  cian_url       3009 non-null   object        \n",
-      " 22  cian_page      3009 non-null   float64       \n",
-      " 23  latitude       19475 non-null  float64       \n",
-      " 24  longitude      19475 non-null  float64       \n",
-      "dtypes: bool(8), datetime64[ns](1), float64(7), int64(4), object(5)\n",
-      "memory usage: 3.0+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "13de0b35",
    "metadata": {},
    "outputs": [],
