--- a/07a-analysis-flat.ipynb
+++ b/07a-analysis-flat.ipynb
@@ -902,7 +902,12 @@
     }
    ],
    "source": [
-    "stat = gdf.groupby(['nrooms','dt',])['priceM'].describe(percentiles=[.1,.25,.5,.75,.9])\n",
+    "stat = (\n",
+    "    gdf.query('priceM>1.')\n",
+    "    .groupby(['nrooms','dt'])\n",
+    "    ['priceM'].describe(percentiles=[.1,.25,.5,.75,.9])\n",
+    ")\n",
+    "\n",
     "stat"
    ]
   },
@@ -936,7 +941,7 @@
     }
    ],
    "source": [
-    "stat.loc[1,['min','50%']].plot(grid=True, title='цена на 1к')"
+    "stat.loc[1,['min','25%','50%']].plot(grid=True, title='цена на 1к')"
    ]
   },
   {
@@ -969,7 +974,7 @@
     }
    ],
    "source": [
-    "stat.loc[2,['min','50%']].plot(grid=True, title='цена на 2к')"
+    "stat.loc[2,['min','25%','50%']].plot(grid=True, title='цена на 2к')"
    ]
   },
   {
@@ -1002,7 +1007,7 @@
     }
    ],
    "source": [
-    "stat.loc[3,['min','50%']].plot(grid=True,title='цена на 3к')"
+    "stat.loc[3,['min','25%','50%']].plot(grid=True,title='цена на 3к')"
    ]
   },
   {
