--- a/01a-avito-downloader-flat.ipynb
+++ b/01a-avito-downloader-flat.ipynb
@@ -115,91 +115,93 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2022-09-12 13:39:36 | DownloaderSeleniumFirefox: downloader init\n",
-      "[INFO    ] 2022-09-12 13:39:36 | DownloaderSeleniumFirefox: open virtual browser\n",
-      "[INFO    ] 2022-09-12 13:39:39 | AdsListParser: downloader init\n",
-      "[INFO    ] 2022-09-12 13:39:39 | AvitoParser: init\n",
-      "[INFO    ] 2022-09-12 13:39:45 | AvitoParser: 74 pages for read\n",
-      "[INFO    ] 2022-09-12 13:39:45 | AdsListParser: start read and parse pages...\n",
-      "[INFO    ] 2022-09-12 13:39:48 | AdsListParser: read page 1\n",
-      "[INFO    ] 2022-09-12 13:39:52 | AdsListParser: read page 2\n",
-      "[INFO    ] 2022-09-12 13:39:56 | AdsListParser: read page 3\n",
-      "[INFO    ] 2022-09-12 13:39:59 | AdsListParser: read page 4\n",
-      "[INFO    ] 2022-09-12 13:40:03 | AdsListParser: read page 5\n",
-      "[INFO    ] 2022-09-12 13:40:07 | AdsListParser: read page 6\n",
-      "[INFO    ] 2022-09-12 13:40:11 | AdsListParser: read page 7\n",
-      "[INFO    ] 2022-09-12 13:40:15 | AdsListParser: read page 8\n",
-      "[INFO    ] 2022-09-12 13:40:19 | AdsListParser: read page 9\n",
-      "[INFO    ] 2022-09-12 13:40:23 | AdsListParser: read page 10\n",
-      "[INFO    ] 2022-09-12 13:40:26 | AdsListParser: read page 11\n",
-      "[INFO    ] 2022-09-12 13:40:30 | AdsListParser: read page 12\n",
-      "[INFO    ] 2022-09-12 13:40:33 | AdsListParser: read page 13\n",
-      "[INFO    ] 2022-09-12 13:40:36 | AdsListParser: read page 14\n",
-      "[INFO    ] 2022-09-12 13:40:40 | AdsListParser: read page 15\n",
-      "[INFO    ] 2022-09-12 13:40:46 | AdsListParser: read page 16\n",
-      "[INFO    ] 2022-09-12 13:40:53 | AdsListParser: read page 17\n",
-      "[INFO    ] 2022-09-12 13:40:59 | AdsListParser: read page 18\n",
-      "[INFO    ] 2022-09-12 13:41:03 | AdsListParser: read page 19\n",
-      "[INFO    ] 2022-09-12 13:41:07 | AdsListParser: read page 20\n",
-      "[INFO    ] 2022-09-12 13:41:10 | AdsListParser: read page 21\n",
-      "[INFO    ] 2022-09-12 13:41:14 | AdsListParser: read page 22\n",
-      "[INFO    ] 2022-09-12 13:41:18 | AdsListParser: read page 23\n",
-      "[INFO    ] 2022-09-12 13:41:22 | AdsListParser: read page 24\n",
-      "[INFO    ] 2022-09-12 13:41:27 | AdsListParser: read page 25\n",
-      "[INFO    ] 2022-09-12 13:41:32 | AdsListParser: read page 26\n",
-      "[INFO    ] 2022-09-12 13:41:38 | AdsListParser: read page 27\n",
-      "[INFO    ] 2022-09-12 13:41:43 | AdsListParser: read page 28\n",
-      "[INFO    ] 2022-09-12 13:41:47 | AdsListParser: read page 29\n",
-      "[INFO    ] 2022-09-12 13:41:51 | AdsListParser: read page 30\n",
-      "[INFO    ] 2022-09-12 13:41:55 | AdsListParser: read page 31\n",
-      "[INFO    ] 2022-09-12 13:42:00 | AdsListParser: read page 32\n",
-      "[INFO    ] 2022-09-12 13:42:03 | AdsListParser: read page 33\n",
-      "[INFO    ] 2022-09-12 13:42:07 | AdsListParser: read page 34\n",
-      "[INFO    ] 2022-09-12 13:42:10 | AdsListParser: read page 35\n",
-      "[INFO    ] 2022-09-12 13:42:14 | AdsListParser: read page 36\n",
-      "[INFO    ] 2022-09-12 13:42:18 | AdsListParser: read page 37\n",
-      "[INFO    ] 2022-09-12 13:42:23 | AdsListParser: read page 38\n",
-      "[INFO    ] 2022-09-12 13:42:27 | AdsListParser: read page 39\n",
-      "[INFO    ] 2022-09-12 13:42:30 | AdsListParser: read page 40\n",
-      "[INFO    ] 2022-09-12 13:42:35 | AdsListParser: read page 41\n",
-      "[INFO    ] 2022-09-12 13:42:39 | AdsListParser: read page 42\n",
-      "[INFO    ] 2022-09-12 13:42:43 | AdsListParser: read page 43\n",
-      "[INFO    ] 2022-09-12 13:42:47 | AdsListParser: read page 44\n",
-      "[INFO    ] 2022-09-12 13:42:50 | AdsListParser: read page 45\n",
-      "[INFO    ] 2022-09-12 13:42:54 | AdsListParser: read page 46\n",
-      "[INFO    ] 2022-09-12 13:42:58 | AdsListParser: read page 47\n",
-      "[INFO    ] 2022-09-12 13:43:02 | AdsListParser: read page 48\n",
-      "[INFO    ] 2022-09-12 13:43:07 | AdsListParser: read page 49\n",
-      "[INFO    ] 2022-09-12 13:43:11 | AdsListParser: read page 50\n",
-      "[INFO    ] 2022-09-12 13:43:15 | AdsListParser: read page 51\n",
-      "[INFO    ] 2022-09-12 13:43:19 | AdsListParser: read page 52\n",
-      "[INFO    ] 2022-09-12 13:43:24 | AdsListParser: read page 53\n",
-      "[INFO    ] 2022-09-12 13:43:28 | AdsListParser: read page 54\n",
-      "[INFO    ] 2022-09-12 13:43:32 | AdsListParser: read page 55\n",
-      "[INFO    ] 2022-09-12 13:43:36 | AdsListParser: read page 56\n",
-      "[INFO    ] 2022-09-12 13:43:40 | AdsListParser: read page 57\n",
-      "[INFO    ] 2022-09-12 13:43:44 | AdsListParser: read page 58\n",
-      "[INFO    ] 2022-09-12 13:43:47 | AdsListParser: read page 59\n",
-      "[INFO    ] 2022-09-12 13:43:51 | AdsListParser: read page 60\n",
-      "[INFO    ] 2022-09-12 13:43:55 | AdsListParser: read page 61\n",
-      "[INFO    ] 2022-09-12 13:43:59 | AdsListParser: read page 62\n",
-      "[INFO    ] 2022-09-12 13:44:02 | AdsListParser: read page 63\n",
-      "[INFO    ] 2022-09-12 13:44:08 | AdsListParser: read page 64\n",
-      "[INFO    ] 2022-09-12 13:44:13 | AdsListParser: read page 65\n",
-      "[INFO    ] 2022-09-12 13:44:17 | AdsListParser: read page 66\n",
-      "[INFO    ] 2022-09-12 13:44:21 | AdsListParser: read page 67\n",
-      "[INFO    ] 2022-09-12 13:44:25 | AdsListParser: read page 68\n",
-      "[INFO    ] 2022-09-12 13:44:28 | AdsListParser: read page 69\n",
-      "[INFO    ] 2022-09-12 13:44:33 | AdsListParser: read page 70\n",
-      "[INFO    ] 2022-09-12 13:44:37 | AdsListParser: read page 71\n",
-      "[INFO    ] 2022-09-12 13:44:40 | AdsListParser: read page 72\n",
-      "[INFO    ] 2022-09-12 13:44:45 | AdsListParser: read page 73\n",
-      "[INFO    ] 2022-09-12 13:44:49 | AdsListParser: read page 74\n",
-      "[INFO    ] 2022-09-12 13:44:49 | AdsListParser: last page detected\n",
-      "[INFO    ] 2022-09-12 13:44:49 | DownloaderSeleniumFirefox: close virtual browser\n",
-      "3682\n",
-      "CPU times: user 16.6 s, sys: 1.06 s, total: 17.6 s\n",
-      "Wall time: 5min 13s\n"
+      "[INFO    ] 2022-09-13 13:49:19 | DownloaderSeleniumFirefox: downloader init\n",
+      "[INFO    ] 2022-09-13 13:49:19 | DownloaderSeleniumFirefox: open virtual browser\n",
+      "[INFO    ] 2022-09-13 13:49:21 | AdsListParser: downloader init\n",
+      "[INFO    ] 2022-09-13 13:49:21 | AvitoParser: init\n",
+      "[INFO    ] 2022-09-13 13:49:27 | AvitoParser: 76 pages for read\n",
+      "[INFO    ] 2022-09-13 13:49:27 | AdsListParser: start read and parse pages...\n",
+      "[INFO    ] 2022-09-13 13:49:33 | AdsListParser: read page 1\n",
+      "[INFO    ] 2022-09-13 13:49:37 | AdsListParser: read page 2\n",
+      "[INFO    ] 2022-09-13 13:49:42 | AdsListParser: read page 3\n",
+      "[INFO    ] 2022-09-13 13:49:46 | AdsListParser: read page 4\n",
+      "[INFO    ] 2022-09-13 13:49:51 | AdsListParser: read page 5\n",
+      "[INFO    ] 2022-09-13 13:49:57 | AdsListParser: read page 6\n",
+      "[INFO    ] 2022-09-13 13:50:04 | AdsListParser: read page 7\n",
+      "[INFO    ] 2022-09-13 13:50:08 | AdsListParser: read page 8\n",
+      "[INFO    ] 2022-09-13 13:50:13 | AdsListParser: read page 9\n",
+      "[INFO    ] 2022-09-13 13:50:18 | AdsListParser: read page 10\n",
+      "[INFO    ] 2022-09-13 13:50:23 | AdsListParser: read page 11\n",
+      "[INFO    ] 2022-09-13 13:50:27 | AdsListParser: read page 12\n",
+      "[INFO    ] 2022-09-13 13:50:32 | AdsListParser: read page 13\n",
+      "[INFO    ] 2022-09-13 13:50:37 | AdsListParser: read page 14\n",
+      "[INFO    ] 2022-09-13 13:50:42 | AdsListParser: read page 15\n",
+      "[INFO    ] 2022-09-13 13:50:47 | AdsListParser: read page 16\n",
+      "[INFO    ] 2022-09-13 13:50:53 | AdsListParser: read page 17\n",
+      "[INFO    ] 2022-09-13 13:51:00 | AdsListParser: read page 18\n",
+      "[INFO    ] 2022-09-13 13:51:05 | AdsListParser: read page 19\n",
+      "[INFO    ] 2022-09-13 13:51:09 | AdsListParser: read page 20\n",
+      "[INFO    ] 2022-09-13 13:51:12 | AdsListParser: read page 21\n",
+      "[INFO    ] 2022-09-13 13:51:18 | AdsListParser: read page 22\n",
+      "[INFO    ] 2022-09-13 13:51:21 | AdsListParser: read page 23\n",
+      "[INFO    ] 2022-09-13 13:51:26 | AdsListParser: read page 24\n",
+      "[INFO    ] 2022-09-13 13:51:31 | AdsListParser: read page 25\n",
+      "[INFO    ] 2022-09-13 13:51:36 | AdsListParser: read page 26\n",
+      "[INFO    ] 2022-09-13 13:51:40 | AdsListParser: read page 27\n",
+      "[INFO    ] 2022-09-13 13:51:43 | AdsListParser: read page 28\n",
+      "[INFO    ] 2022-09-13 13:51:49 | AdsListParser: read page 29\n",
+      "[INFO    ] 2022-09-13 13:51:53 | AdsListParser: read page 30\n",
+      "[INFO    ] 2022-09-13 13:51:57 | AdsListParser: read page 31\n",
+      "[INFO    ] 2022-09-13 13:52:01 | AdsListParser: read page 32\n",
+      "[INFO    ] 2022-09-13 13:52:04 | AdsListParser: read page 33\n",
+      "[INFO    ] 2022-09-13 13:52:07 | AdsListParser: read page 34\n",
+      "[INFO    ] 2022-09-13 13:52:11 | AdsListParser: read page 35\n",
+      "[INFO    ] 2022-09-13 13:52:14 | AdsListParser: read page 36\n",
+      "[INFO    ] 2022-09-13 13:52:19 | AdsListParser: read page 37\n",
+      "[INFO    ] 2022-09-13 13:52:23 | AdsListParser: read page 38\n",
+      "[INFO    ] 2022-09-13 13:52:27 | AdsListParser: read page 39\n",
+      "[INFO    ] 2022-09-13 13:52:32 | AdsListParser: read page 40\n",
+      "[INFO    ] 2022-09-13 13:52:35 | AdsListParser: read page 41\n",
+      "[INFO    ] 2022-09-13 13:52:40 | AdsListParser: read page 42\n",
+      "[INFO    ] 2022-09-13 13:52:44 | AdsListParser: read page 43\n",
+      "[INFO    ] 2022-09-13 13:52:49 | AdsListParser: read page 44\n",
+      "[INFO    ] 2022-09-13 13:52:53 | AdsListParser: read page 45\n",
+      "[INFO    ] 2022-09-13 13:52:57 | AdsListParser: read page 46\n",
+      "[INFO    ] 2022-09-13 13:53:00 | AdsListParser: read page 47\n",
+      "[INFO    ] 2022-09-13 13:53:04 | AdsListParser: read page 48\n",
+      "[INFO    ] 2022-09-13 13:53:08 | AdsListParser: read page 49\n",
+      "[INFO    ] 2022-09-13 13:53:12 | AdsListParser: read page 50\n",
+      "[INFO    ] 2022-09-13 13:53:16 | AdsListParser: read page 51\n",
+      "[INFO    ] 2022-09-13 13:53:20 | AdsListParser: read page 52\n",
+      "[INFO    ] 2022-09-13 13:53:24 | AdsListParser: read page 53\n",
+      "[INFO    ] 2022-09-13 13:53:28 | AdsListParser: read page 54\n",
+      "[INFO    ] 2022-09-13 13:53:33 | AdsListParser: read page 55\n",
+      "[INFO    ] 2022-09-13 13:53:37 | AdsListParser: read page 56\n",
+      "[INFO    ] 2022-09-13 13:53:41 | AdsListParser: read page 57\n",
+      "[INFO    ] 2022-09-13 13:53:44 | AdsListParser: read page 58\n",
+      "[INFO    ] 2022-09-13 13:53:48 | AdsListParser: read page 59\n",
+      "[INFO    ] 2022-09-13 13:53:52 | AdsListParser: read page 60\n",
+      "[INFO    ] 2022-09-13 13:53:57 | AdsListParser: read page 61\n",
+      "[INFO    ] 2022-09-13 13:54:03 | AdsListParser: read page 62\n",
+      "[INFO    ] 2022-09-13 13:54:07 | AdsListParser: read page 63\n",
+      "[INFO    ] 2022-09-13 13:54:10 | AdsListParser: read page 64\n",
+      "[INFO    ] 2022-09-13 13:54:14 | AdsListParser: read page 65\n",
+      "[INFO    ] 2022-09-13 13:54:17 | AdsListParser: read page 66\n",
+      "[INFO    ] 2022-09-13 13:54:20 | AdsListParser: read page 67\n",
+      "[INFO    ] 2022-09-13 13:54:24 | AdsListParser: read page 68\n",
+      "[INFO    ] 2022-09-13 13:54:30 | AdsListParser: read page 69\n",
+      "[INFO    ] 2022-09-13 13:54:36 | AdsListParser: read page 70\n",
+      "[INFO    ] 2022-09-13 13:54:41 | AdsListParser: read page 71\n",
+      "[INFO    ] 2022-09-13 13:54:47 | AdsListParser: read page 72\n",
+      "[INFO    ] 2022-09-13 13:54:52 | AdsListParser: read page 73\n",
+      "[INFO    ] 2022-09-13 13:54:56 | AdsListParser: read page 74\n",
+      "[INFO    ] 2022-09-13 13:55:01 | AdsListParser: read page 75\n",
+      "[INFO    ] 2022-09-13 13:55:03 | AdsListParser: read page 76\n",
+      "[INFO    ] 2022-09-13 13:55:03 | AdsListParser: last page detected\n",
+      "[INFO    ] 2022-09-13 13:55:03 | DownloaderSeleniumFirefox: close virtual browser\n",
+      "3753\n",
+      "CPU times: user 17.2 s, sys: 887 ms, total: 18.1 s\n",
+      "Wall time: 5min 44s\n"
      ]
     }
    ],
@@ -227,8 +229,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3682\n",
-      "3106\n"
+      "3753\n",
+      "3413\n"
      ]
     }
    ],
@@ -289,47 +291,47 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>677</th>\n",
-       "      <td>2161799926</td>\n",
-       "      <td>Объявление «1-к. квартира, 29 м², 1/2 эт.» 22 фотографии</td>\n",
-       "      <td>4600000</td>\n",
+       "      <th>534</th>\n",
+       "      <td>2489621730</td>\n",
+       "      <td>Объявление «1-к. квартира, 33 м², 4/5 эт.» 14 фотографий</td>\n",
+       "      <td>6000000</td>\n",
        "      <td></td>\n",
-       "      <td>ул. Коли Пищенко, 20А</td>\n",
-       "      <td>Цена снижена! Нашли встречку. Однокомнатная сталинка с хорошим ремонтом с большой придомовой территорией своей для отдыха. \\nВ зеленом районе со всей инфраструктурой. \\nПоликлиники, школы, сады, рынок, ТЦ, спортшкола, детский парк «Лукоморье», все в шaгoвой</td>\n",
-       "      <td>17</td>\n",
-       "      <td>2022-09-12 13:44:49.319330</td>\n",
+       "      <td>ул. Александра Шостака, 1</td>\n",
+       "      <td>Однокомнатная квартира 33 м2, на 4/5 этаже дома. Расположена в г. Севастополь, Гагаринский район, ул. Александра Шостака, д. 1. \\n\\nКвартира будет идеальным решением для большой семьи. \\n\\nПозвоните нам, чтобы узнать все детали! \\n\\nТехнические характеристики: \\n</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2022-09-13 13:55:03.078825</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2849</th>\n",
-       "      <td>2352506541</td>\n",
-       "      <td>Объявление «1-к. квартира, 40,1 м², 6/9 эт.» 7 фотографий</td>\n",
-       "      <td>9900000</td>\n",
+       "      <th>653</th>\n",
+       "      <td>2441833498</td>\n",
+       "      <td>Объявление «2-к. апартаменты, 45 м², 1/1 эт.» 18 фотографий</td>\n",
+       "      <td>7500000</td>\n",
        "      <td></td>\n",
-       "      <td>Античный пр-т, 5</td>\n",
-       "      <td>Арт. 19590900 Продам квартиру в новом доме по адресу: г Севастополь ул. Проспект Античный 5 в ЖК «Легенда».\\n\\nВ непосредственной близости от дома расположено всё необходимое для комфортной жизни: ТЦ Апельсин, магазины с товарами первой необходимости, 2 новы</td>\n",
-       "      <td>69</td>\n",
-       "      <td>2022-09-12 13:44:49.319330</td>\n",
+       "      <td>с. Орловка, Качинское ш., 33Б</td>\n",
+       "      <td>Мечтаете о собственном уголке на берегу моря? А может Вы ищете готовый бизнес? Эти апартаменты то, что подойдет именно Вам! \\n\\nПросторные апартаменты в семейном комплексе «Звездный Берег». На территории в 9 гектар, которая утопает в зелени есть все необходи</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2022-09-13 13:55:03.078825</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        avito_id                                                      title  \\\n",
-       "677   2161799926   Объявление «1-к. квартира, 29 м², 1/2 эт.» 22 фотографии   \n",
-       "2849  2352506541  Объявление «1-к. квартира, 40,1 м², 6/9 эт.» 7 фотографий   \n",
+       "       avito_id                                                        title  \\\n",
+       "534  2489621730     Объявление «1-к. квартира, 33 м², 4/5 эт.» 14 фотографий   \n",
+       "653  2441833498  Объявление «2-к. апартаменты, 45 м², 1/1 эт.» 18 фотографий   \n",
        "\n",
-       "        price obj_name                    adr  \\\n",
-       "677   4600000           ул. Коли Пищенко, 20А   \n",
-       "2849  9900000                Античный пр-т, 5   \n",
+       "       price obj_name                            adr  \\\n",
+       "534  6000000               ул. Александра Шостака, 1   \n",
+       "653  7500000           с. Орловка, Качинское ш., 33Б   \n",
        "\n",
-       "                                                                                                                                                                                                                                                             description  \\\n",
-       "677   Цена снижена! Нашли встречку. Однокомнатная сталинка с хорошим ремонтом с большой придомовой территорией своей для отдыха. \\nВ зеленом районе со всей инфраструктурой. \\nПоликлиники, школы, сады, рынок, ТЦ, спортшкола, детский парк «Лукоморье», все в шaгoвой    \n",
-       "2849  Арт. 19590900 Продам квартиру в новом доме по адресу: г Севастополь ул. Проспект Античный 5 в ЖК «Легенда».\\n\\nВ непосредственной близости от дома расположено всё необходимое для комфортной жизни: ТЦ Апельсин, магазины с товарами первой необходимости, 2 новы   \n",
+       "                                                                                                                                                                                                                                                                 description  \\\n",
+       "534  Однокомнатная квартира 33 м2, на 4/5 этаже дома. Расположена в г. Севастополь, Гагаринский район, ул. Александра Шостака, д. 1. \\n\\nКвартира будет идеальным решением для большой семьи. \\n\\nПозвоните нам, чтобы узнать все детали! \\n\\nТехнические характеристики: \\n   \n",
+       "653       Мечтаете о собственном уголке на берегу моря? А может Вы ищете готовый бизнес? Эти апартаменты то, что подойдет именно Вам! \\n\\nПросторные апартаменты в семейном комплексе «Звездный Берег». На территории в 9 гектар, которая утопает в зелени есть все необходи   \n",
        "\n",
-       "      page                         ts  \n",
-       "677     17 2022-09-12 13:44:49.319330  \n",
-       "2849    69 2022-09-12 13:44:49.319330  "
+       "     page                         ts  \n",
+       "534    12 2022-09-13 13:55:03.078825  \n",
+       "653    15 2022-09-13 13:55:03.078825  "
       ]
      },
      "execution_count": 9,
