--- a/06b-data-join-land.ipynb
+++ b/06b-data-join-land.ipynb
@@ -602,7 +602,7 @@
     "# from lib.locator import LocationUpdater\n",
     "# from lib.locator import AddressTransformerSev\n",
     "\n",
-    "# loc_file_path = 'data/location_osm.pkl'# таблица адресов\n",
+    "# loc_file_path = 'data/location.pkl'# таблица адресов\n",
     "\n",
     "# loc = LocationUpdater(\n",
     "#         address_transformer=AddressTransformerSev(),\n",
@@ -637,7 +637,7 @@
     "from yandex_keys import keys\n",
     "\n",
     "\n",
-    "loc_file_path = 'data/location_yandex.pkl'# таблица адресов\n",
+    "loc_file_path = 'data/location.pkl'# таблица адресов\n",
     "\n",
     "loc = LocationUpdater(\n",
     "        locator=GeocoderYandex(keys[0]),\n",
