--- a/06a-data-join-flat.ipynb
+++ b/06a-data-join-flat.ipynb
@@ -492,45 +492,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ee01d714",
+   "execution_count": 21,
+   "id": "60d30efe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from lib.locator import LocationUpdater\n",
+    "# from lib.locator import AddressTransformerSev\n",
+    "# from lib.locator import GeocoderYandex\n",
+    "# from yandex_keys import keys\n",
+    "\n",
+    "# loc_file_path = 'data/location.pkl'# таблица адресов\n",
+    "\n",
+    "# loc = LocationUpdater(\n",
+    "#         locator=GeocoderYandex(keys[0]),\n",
+    "#         address_transformer=AddressTransformerSev(),\n",
+    "#     ).transform(\n",
+    "#         adr=data['adr'],\n",
+    "#         loc=pd.read_pickle(loc_file_path),\n",
+    "#         show_pbar=True,\n",
+    "#     )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "7d191d0d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO    ] 2022-09-13 15:36:31 | LocationUpdater: 875 addresses in location table\n",
-      "[INFO    ] 2022-09-13 15:36:31 | LocationUpdater: 3639 addresses total\n",
-      "[INFO    ] 2022-09-13 15:36:31 | LocationUpdater: 875 addresses defined\n",
-      "[INFO    ] 2022-09-13 15:36:31 | LocationUpdater: 2764 addresses undefined\n"
+      "[INFO    ] 2022-09-13 17:20:27 | LocationUpdater: 1944 addresses in location table\n",
+      "[INFO    ] 2022-09-13 17:20:27 | LocationUpdater: 3639 addresses total\n",
+      "[INFO    ] 2022-09-13 17:20:27 | LocationUpdater: 1944 addresses defined\n",
+      "[INFO    ] 2022-09-13 17:20:27 | LocationUpdater: 1695 addresses undefined\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "59e906fc0d994bb3ae544893619c31ad",
+       "model_id": "654e6a3878ea4bcf9ae2db18098a9b6f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/2764 [00:00<?, ?it/s]"
+       "  0%|          | 0/1695 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[WARNING ] 2022-09-13 17:37:12 | Retrying (Retry(total=1, connect=None, read=None, redirect=None, status=None)) after connection broken by 'ReadTimeoutError(\"HTTPSConnectionPool(host='nominatim.openstreetmap.org', port=443): Read timed out. (read timeout=1)\")': /search?q=%5B%27%D0%A1%D0%B5%D0%B2%D0%B0%D1%81%D1%82%D0%BE%D0%BF%D0%BE%D0%BB%D1%8C%27%2C+%27+%D1%80%D0%B0%D0%B9%D0%BE%D0%BD+%D0%9B%D0%B5%D0%BD%D0%B8%D0%BD%D1%81%D0%BA%D0%B8%D0%B9%27%2C+%27+%D0%9E%D1%81%D1%82%D1%80%D1%8F%D0%BA%D0%BE%D0%B2%D0%B0%27%5D&format=json&limit=1\n",
+      "[WARNING ] 2022-09-13 17:44:07 | Retrying (Retry(total=1, connect=None, read=None, redirect=None, status=None)) after connection broken by 'ReadTimeoutError(\"HTTPSConnectionPool(host='nominatim.openstreetmap.org', port=443): Read timed out. (read timeout=1)\")': /search?q=%5B%27%D0%A1%D0%B5%D0%B2%D0%B0%D1%81%D1%82%D0%BE%D0%BF%D0%BE%D0%BB%D1%8C%27%2C+%27+%D1%80%D0%B0%D0%B9%D0%BE%D0%BD+%D0%9D%D0%B0%D1%85%D0%B8%D0%BC%D0%BE%D0%B2%D1%81%D0%BA%D0%B8%D0%B9%27%2C+%27+%D0%9A%D0%BE%D1%80%D0%B0%D0%B1%D0%B5%D0%BB%D1%8C%D0%BD%D0%B0%D1%8F+%D1%81%D1%82%D0%BE%D1%80%D0%BE%D0%BD%D0%B0%27%5D&format=json&limit=1\n",
+      "[WARNING ] 2022-09-13 17:44:13 | Retrying (Retry(total=0, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<urllib3.connection.HTTPSConnection object at 0x7fdd982d58d0>: Failed to establish a new connection: [Errno 101] Network is unreachable')': /search?q=%5B%27%D0%A1%D0%B5%D0%B2%D0%B0%D1%81%D1%82%D0%BE%D0%BF%D0%BE%D0%BB%D1%8C%27%2C+%27+%D1%80%D0%B0%D0%B9%D0%BE%D0%BD+%D0%9D%D0%B0%D1%85%D0%B8%D0%BC%D0%BE%D0%B2%D1%81%D0%BA%D0%B8%D0%B9%27%2C+%27+%D0%9A%D0%BE%D1%80%D0%B0%D0%B1%D0%B5%D0%BB%D1%8C%D0%BD%D0%B0%D1%8F+%D1%81%D1%82%D0%BE%D1%80%D0%BE%D0%BD%D0%B0%27%5D&format=json&limit=1\n",
+      "[WARNING ] 2022-09-13 17:47:00 | Retrying (Retry(total=1, connect=None, read=None, redirect=None, status=None)) after connection broken by 'ReadTimeoutError(\"HTTPSConnectionPool(host='nominatim.openstreetmap.org', port=443): Read timed out. (read timeout=1)\")': /search?q=%5B%27%D0%A1%D0%B5%D0%B2%D0%B0%D1%81%D1%82%D0%BE%D0%BF%D0%BE%D0%BB%D1%8C%27%2C+%27+%D1%80%D0%B0%D0%B9%D0%BE%D0%BD+%D0%9B%D0%B5%D0%BD%D0%B8%D0%BD%D1%81%D0%BA%D0%B8%D0%B9%27%2C+%27+%D0%9E%D1%81%D1%82%D1%80%D1%8F%D0%BA%D0%BE%D0%B2%D0%B0%27%2C+%27+%D1%83%D0%BB%D0%B8%D1%86%D0%B0+%D0%9D%D0%B8%D0%BA%D0%BE%D0%BB%D0%B0%D1%8F+%D0%9C%D1%83%D0%B7%D1%8B%D0%BA%D0%B8%27%5D&format=json&limit=1\n",
+      "[WARNING ] 2022-09-13 17:47:06 | Retrying (Retry(total=0, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NewConnectionError('<urllib3.connection.HTTPSConnection object at 0x7fdd982d5120>: Failed to establish a new connection: [Errno 101] Network is unreachable')': /search?q=%5B%27%D0%A1%D0%B5%D0%B2%D0%B0%D1%81%D1%82%D0%BE%D0%BF%D0%BE%D0%BB%D1%8C%27%2C+%27+%D1%80%D0%B0%D0%B9%D0%BE%D0%BD+%D0%9B%D0%B5%D0%BD%D0%B8%D0%BD%D1%81%D0%BA%D0%B8%D0%B9%27%2C+%27+%D0%9E%D1%81%D1%82%D1%80%D1%8F%D0%BA%D0%BE%D0%B2%D0%B0%27%2C+%27+%D1%83%D0%BB%D0%B8%D1%86%D0%B0+%D0%9D%D0%B8%D0%BA%D0%BE%D0%BB%D0%B0%D1%8F+%D0%9C%D1%83%D0%B7%D1%8B%D0%BA%D0%B8%27%5D&format=json&limit=1\n",
+      "[INFO    ] 2022-09-13 17:47:47 | LocationUpdater: 1672 new addresses found\n"
+     ]
     }
    ],
    "source": [
     "from lib.locator import LocationUpdater\n",
     "from lib.locator import AddressTransformerSev\n",
-    "from lib.locator import GeocoderYandex\n",
-    "from yandex_keys import keys\n",
     "\n",
-    "loc_file_path = 'data/location_yandex.pkl'# таблица адресов\n",
+    "loc_file_path = 'data/location.pkl'# таблица адресов\n",
     "\n",
     "loc = LocationUpdater(\n",
-    "        locator=GeocoderYandex(keys[0]),\n",
     "        address_transformer=AddressTransformerSev(),\n",
     "    ).transform(\n",
     "        adr=data['adr'],\n",
@@ -541,38 +574,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7d191d0d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from lib.locator import LocationUpdater\n",
-    "# from lib.locator import AddressTransformerSev\n",
-    "\n",
-    "# loc_file_path = 'data/location_osm.pkl'# таблица адресов\n",
-    "\n",
-    "# loc = LocationUpdater(\n",
-    "#         address_transformer=AddressTransformerSev(),\n",
-    "#     ).transform(\n",
-    "#         adr=data['adr'],\n",
-    "#         loc=pd.read_pickle(loc_file_path+'/location_osm.pkl'),\n",
-    "#         show_pbar=True,\n",
-    "#     )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "19741bb7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>adr</th>\n",
+       "      <th>truncated</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2392</th>\n",
+       "      <td>44.64</td>\n",
+       "      <td>33.55</td>\n",
+       "      <td>улица Богданова, 12</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>441</th>\n",
+       "      <td>44.57</td>\n",
+       "      <td>33.40</td>\n",
+       "      <td>садоводческое товарищество Верхний Сатурн, 292</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>719</th>\n",
+       "      <td>44.59</td>\n",
+       "      <td>33.56</td>\n",
+       "      <td>Барнаульская ул.</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      latitude  longitude                                             adr  \\\n",
+       "2392     44.64      33.55                             улица Богданова, 12   \n",
+       "441      44.57      33.40  садоводческое товарищество Верхний Сатурн, 292   \n",
+       "719      44.59      33.56                                Барнаульская ул.   \n",
+       "\n",
+       "     truncated  \n",
+       "2392     False  \n",
+       "441        NaN  \n",
+       "719        NaN  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "loc.sample(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "a90d2398",
    "metadata": {},
    "outputs": [],
@@ -591,10 +673,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "06470644",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "всего записей: 22466\n",
+      "записей без геометки: 100\n"
+     ]
+    }
+   ],
    "source": [
     "data = data.merge(loc[['adr','latitude','longitude',]],on=['adr'],how='left')\n",
     "\n",
@@ -604,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "b3161e64",
    "metadata": {},
    "outputs": [],
@@ -615,17 +706,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "799e47c2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 22466 entries, 0 to 22465\n",
+      "Data columns (total 25 columns):\n",
+      " #   Column         Non-Null Count  Dtype         \n",
+      "---  ------         --------------  -----         \n",
+      " 0   avito_id       17951 non-null  float64       \n",
+      " 1   title          22466 non-null  object        \n",
+      " 2   price          22466 non-null  int64         \n",
+      " 3   adr            22466 non-null  object        \n",
+      " 4   description    22466 non-null  object        \n",
+      " 5   obj_name       22466 non-null  object        \n",
+      " 6   ts             22466 non-null  datetime64[ns]\n",
+      " 7   avito_page     17951 non-null  float64       \n",
+      " 8   nrooms         22466 non-null  int64         \n",
+      " 9   floor          22466 non-null  int64         \n",
+      " 10  nfloors        22466 non-null  int64         \n",
+      " 11  area           22466 non-null  float64       \n",
+      " 12  is_studio      22466 non-null  bool          \n",
+      " 13  is_apartment   22466 non-null  bool          \n",
+      " 14  is_part        22466 non-null  bool          \n",
+      " 15  is_auction     22466 non-null  bool          \n",
+      " 16  is_openspace   22466 non-null  bool          \n",
+      " 17  is_roof        22466 non-null  bool          \n",
+      " 18  is_SNT         22466 non-null  bool          \n",
+      " 19  priceM         22466 non-null  float64       \n",
+      " 20  is_last_floor  22466 non-null  bool          \n",
+      " 21  cian_url       4515 non-null   object        \n",
+      " 22  cian_page      4515 non-null   float64       \n",
+      " 23  latitude       22366 non-null  float64       \n",
+      " 24  longitude      22366 non-null  float64       \n",
+      "dtypes: bool(8), datetime64[ns](1), float64(7), int64(4), object(5)\n",
+      "memory usage: 3.3+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "data.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "13de0b35",
    "metadata": {},
    "outputs": [],
@@ -637,6 +767,156 @@
     "#     df.to_excel(f,index=False)\n",
     "#     print(ts)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbcec108",
+   "metadata": {},
+   "source": [
+    "----"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "688f413a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from tqdm.notebook import tqdm\n",
+    "# import pandas as pd\n",
+    "# tqdm.pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "62a527f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# result_file_path = 'data/data_flat.pkl'\n",
+    "# data = pd.read_pickle(result_file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "da77ed33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data[ data['longitude'].isnull() ][['title','adr','latitude','longitude']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "0aad043a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from lib.locator import LocationUpdater\n",
+    "# from lib.locator import AddressTransformerSev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "d0fd7ba6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# adr = data[ data['longitude'].isnull() ].sample(10)[['adr']]\n",
+    "# adr['adr_'] = AddressTransformerSev().transform(adr['adr'])\n",
+    "# adr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "92034060",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from geopy.geocoders import Nominatim\n",
+    "\n",
+    "# user_agent='Mozilla/5.0 (Windows NT 10.0; rv:91.0) Gecko/20100101 Firefox/91.0'\n",
+    "# geolocator = Nominatim(user_agent=user_agent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "9e618c2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# adr['adr_']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "9ef14bcc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def coo(s,geolocator=geolocator):\n",
+    "#     loc = geolocator.geocode(s)\n",
+    "#     if not (loc is None):\n",
+    "#         return { 'latitude':loc.latitude,'longitude':loc.longitude}\n",
+    "#     return None\n",
+    "    \n",
+    "# adr['adr_'].progress_apply( coo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "5a2529c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loc_file_path = 'data/location.pkl'# таблица адресов"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "77c1760d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loc = LocationUpdater(\n",
+    "#         address_transformer=AddressTransformerSev(),\n",
+    "#     ).transform(\n",
+    "#         adr=adr['adr'],\n",
+    "#         loc=pd.read_pickle(loc_file_path),\n",
+    "#         show_pbar=True,\n",
+    "#     )\n",
+    "\n",
+    "# loc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "25830926",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loc=pd.read_pickle(loc_file_path)\n",
+    "# loc[loc['longitude'].isnull()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8828c9a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
