--- a/06a-data-join-flat.ipynb
+++ b/06a-data-join-flat.ipynb
@@ -494,6 +494,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a32c32a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from lib.locator import AddressTransformer\n",
+    "\n",
+    "data['adr'] = AddressTransformer().transform( data['adr'] )\n",
+    "\n",
+    "places = {\n",
+    "#'bahchisaray': 'Бахчисарай',\n",
+    "#      'sudak': 'Судак',\n",
+    " 'sevastopol': 'Севастополь',\n",
+    "}\n",
+    "\n",
+    "for k,v in places.items():\n",
+    "    print(k,v)\n",
+    "    f =  (data['place']==k) & (~data['adr'].str.match(v))\n",
+    "    data.loc[f,'adr'] = v +', '+ data.loc[f,'adr']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "id": "60d30efe",
    "metadata": {},
@@ -532,7 +555,7 @@
    ],
    "source": [
     "from lib.locator import LocationUpdater\n",
-    "from lib.locator import AddressTransformerSev\n",
+    "# from lib.locator import AddressTransformerSev\n",
     "from lib.locator import GeocoderYandex\n",
     "from yandex_keys import keys\n",
     "\n",
@@ -540,7 +563,7 @@
     "\n",
     "loc = LocationUpdater(\n",
     "        locator=GeocoderYandex(keys[0]),\n",
-    "        address_transformer=AddressTransformerSev(),\n",
+    "        # address_transformer=AddressTransformerSev(),\n",
     "    ).transform(\n",
     "        adr=data['adr'],\n",
     "        loc=pd.read_pickle(loc_file_path),\n",
@@ -940,7 +963,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "varInspector": {
    "cols": {
