--- a/06b-data-join-land.ipynb
+++ b/06b-data-join-land.ipynb
@@ -616,6 +616,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "42bebe2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from lib.locator import AddressTransformer\n",
+    "\n",
+    "data['adr'] = AddressTransformer().transform( data['adr'] )\n",
+    "\n",
+    "places = {\n",
+    "#'bahchisaray': 'Бахчисарай',\n",
+    "#      'sudak': 'Судак',\n",
+    " 'sevastopol': 'Севастополь',\n",
+    "}\n",
+    "\n",
+    "for k,v in places.items():\n",
+    "    print(k,v)\n",
+    "    f =  (data['place']==k) & (~data['adr'].str.match(v))\n",
+    "    data.loc[f,'adr'] = v +', '+ data.loc[f,'adr']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "id": "7d191d0d",
    "metadata": {},
@@ -654,7 +677,7 @@
    ],
    "source": [
     "from lib.locator import LocationUpdater\n",
-    "from lib.locator import AddressTransformerSev\n",
+    "# from lib.locator import AddressTransformerSev\n",
     "from lib.locator import GeocoderYandex\n",
     "from yandex_keys import keys\n",
     "\n",
@@ -663,7 +686,7 @@
     "\n",
     "loc = LocationUpdater(\n",
     "        locator=GeocoderYandex(keys[0]),\n",
-    "        address_transformer=AddressTransformerSev(),\n",
+    "        # address_transformer=AddressTransformerSev(),\n",
     "    ).transform(\n",
     "        adr=data['adr'],\n",
     "        loc=pd.read_pickle(loc_file_path),\n",
