--- a/01a-avito-downloader-flat.ipynb
+++ b/01a-avito-downloader-flat.ipynb
@@ -100,7 +100,8 @@
     "profile_path = '/home/mechanoid/.mozilla/firefox/p144xo2m.default-release'\n",
     "\n",
     "base_url = 'https://www.avito.ru/'\n",
-    "avito_path = 'sevastopol/kvartiry/prodam'\n",
+    "place = 'sevastopol'\n",
+    "avito_path = place+'/kvartiry/prodam'\n",
     "\n",
     "raw_data_path = 'data/raw/flat/avito' # каталог с файлами объявлений"
    ]
@@ -239,6 +240,16 @@
     "print(len(df))\n",
     "df = df.dropna().drop_duplicates(['avito_id','description']).reset_index(drop=True)\n",
     "print(len(df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6030b88c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['place']=place"
    ]
   },
   {
