--- a/01b-avito-downloader-land.ipynb
+++ b/01b-avito-downloader-land.ipynb
@@ -100,8 +100,8 @@
     "profile_path = '/home/mechanoid/.mozilla/firefox/p144xo2m.default-release'\n",
     "\n",
     "base_url = 'https://www.avito.ru/'\n",
-    "# avito_path = 'sevastopol/kvartiry/prodam'\n",
-    "avito_path = 'sevastopol/zemelnye_uchastki/prodam/izhs'\n",
+    "place = 'sevastopol'\n",
+    "avito_path = place+'/zemelnye_uchastki/prodam/izhs'\n",
     "    \n",
     "raw_data_path = 'data/raw/land/avito' # каталог с файлами объявлений"
    ]
@@ -186,6 +186,16 @@
     "print(len(df))\n",
     "df = df.dropna().drop_duplicates(['avito_id','description']).reset_index(drop=True)\n",
     "print(len(df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76681b12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['place']=place"
    ]
   },
   {
