--- a/02a-cian-downloader-flat.ipynb
+++ b/02a-cian-downloader-flat.ipynb
@@ -67,6 +67,7 @@
    "source": [
     "profile_path = '/home/mechanoid/.mozilla/firefox/p144xo2m.default-release'\n",
     "# base_url, req_param = 'https://sevastopol.cian.ru/kupit-kvartiru/', ''\n",
+    "place = 'sevastopol'\n",
     "base_url, req_param ='https://www.cian.ru/cat.php', 'deal_type=sale&offer_type=flat&region=184723'"
    ]
   },
@@ -317,6 +318,16 @@
     "print(len(df))\n",
     "df = pd.DataFrame(df).dropna().drop_duplicates(['LinkArea','Description',]).reset_index(drop=True)\n",
     "print(len(df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76af0a8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['place']=place"
    ]
   },
   {
